Removing Twitter Credential_1

--- a/Content_Creation_and_Optimization/Umbrella_Academy_INFO6105_Project/Umbrella_Academy_INFO6105_Collecting_Metadata.ipynb
+++ b/Content_Creation_and_Optimization/Umbrella_Academy_INFO6105_Project/Umbrella_Academy_INFO6105_Collecting_Metadata.ipynb
@@ -160,10 +160,10 @@
     "#Twitter Credentials\n",
     "twitter_cred = dict()\n",
     "\n",
-    "twitter_cred['CONSUMER_KEY'] = '17XHiftb4Iu5hVAIh4NacWj9S'\n",
-    "twitter_cred['CONSUMER_SECRET'] = '8xAXhFsfnkiFjSFO5THqRO5J8x8lKSzC9J2GNPUSY7ZPb5z6Qv'\n",
-    "twitter_cred['ACCESS_KEY'] = '1392379572-FInzXaziEqyNCGc8jqtU9LwnFFlHYRpjoihZpiX'\n",
-    "twitter_cred['ACCESS_SECRET'] = 'JBDveSiUU6aXpwx8QkxYhXloDr9DyHn7ocqrqgWqwqctw'"
+    "twitter_cred['CONSUMER_KEY'] = ''\n",
+    "twitter_cred['CONSUMER_SECRET'] = ''\n",
+    "twitter_cred['ACCESS_KEY'] = ''\n",
+    "twitter_cred['ACCESS_SECRET'] = ''"
    ]
   },
   {
