Removing Twitter credentials

--- a/Content_Creation_and_Optimization/Umbrella_Academy_INFO6105_Project/Umbrella_Academy_INFO6105_Sentiment_Analysis.ipynb
+++ b/Content_Creation_and_Optimization/Umbrella_Academy_INFO6105_Project/Umbrella_Academy_INFO6105_Sentiment_Analysis.ipynb
@@ -190,10 +190,10 @@
     "#Twitter Credentials\n",
     "twitter_cred = dict()\n",
     "\n",
-    "twitter_cred['CONSUMER_KEY'] = '2eKSRZ4rCtvI0P530zEmjEeIE'\n",
-    "twitter_cred['CONSUMER_SECRET'] = 'OUVG2jcIjRRuVvJ053RRuwPyAKxt9QXGz7GeKh35V24RsfO5Ep'\n",
-    "twitter_cred['ACCESS_KEY'] = '1392379572-rAHYsSNQCfEmcQndKMBqtIsp018Tb95mz1E9Jyy'\n",
-    "twitter_cred['ACCESS_SECRET'] = 'esUTGAcsgNhHPcEE3qwQd2Y6yL1sun3baRx02YmrUy83z'"
+    "twitter_cred['CONSUMER_KEY'] = ''\n",
+    "twitter_cred['CONSUMER_SECRET'] = ''\n",
+    "twitter_cred['ACCESS_KEY'] = ''\n",
+    "twitter_cred['ACCESS_SECRET'] = ''"
    ]
   },
   {
